Fix alignment of pagination items

--- a/sass/_pagination.scss
+++ b/sass/_pagination.scss
@@ -21,15 +21,16 @@
 	font-size: 18px;
 	font-weight: bold;
 	font-family: Oswald;
-	padding-bottom: 20px;
 }
 
 .pagination-previous {
 	padding-left: 40px;
+	align-self: center;
 }
 
 .pagination-next {
 	padding-right: 40px;
+	align-self: center;
 }
 
 .pagination-ellipsis,
